--- a/receiver/Readme
+++ b/receiver/Readme
@@ -2,3 +2,4 @@ Change log
 ubox_v2_rx_iap_20230523: Add third part remote PPM support, add auto shut off when the PPM signal was idle more than 60 minutes. And both PPMA PPMB are able to control the head light and brake light.
 With PPM signal, To turn on head light by hold the brake signal more than 3 seconds, once turned on, cann't turn off, untill shut off the Ubox.
 Brake light will turn on every time brake PPM singal being applied.
+To upgrade firmware, you need a spintend U-remote.
