--- a/receiver/Readme
+++ b/receiver/Readme
@@ -1,4 +1,28 @@
 Change log
+
+The internal receiver will monitoring the ppm signal to power off when both ppm signals are being idle or loss.
+
+By click the button to configure the auto shutoff time:
+
+Click button to config auto shutoff
+
+Click 10times ---- Disable auto shutoff
+
+Click 10times ---- Auto shutoff after 5minutes
+
+Click 10times ---- Auto shutoff after 15minutes
+
+Click 10times ---- Auto shutoff after 30minutes
+
+Click 10times ---- Auto shutoff after 60minutes
+
+
+The idle signal range is 1425----1575 microsecond.
+
+When the auto shutdown is activated and idle state continued more than 30 seconds, the LED of the power button will start to blinking, this will be helpful for diagnosis.
+
+------
+
 ubox_v2_rx_iap_20230523: Add third part remote PPM support, add auto shut off when the PPM signal was idle more than 60 minutes. And both PPMA PPMB are able to control the head light and brake light.
 With PPM signal, To turn on head light by hold the brake signal more than 3 seconds, once turned on, cann't turn off, untill shut off the Ubox.
 Brake light will turn on every time brake PPM singal being applied.
